...
      mainAxisSize: MainAxisSize.min,
      children: [
        button,
        Builder(
          builder: (context) => Hoverable(
            onTap: () => showQuickAudioMenu(context),
            semanticLabel: 'Audio options',
            focusRadius: BorderRadius.circular(6),
            builder: (context, state) => Container(
              width: 14,
              height: 28,
              alignment: Alignment.center,
              decoration: BoxDecoration(
...
